# DBCatcher

./: .env  .gitignore  README.md  config.py  configyaml.py  divemongo.py  divetree.py  main.py  manager.py  navigationrules.py  pyproject.toml  treepath.py
.github/workflows/: build-package.yml  python-app.yml
compose/: dbinit.js  docker-compose.yml  init.sql
compose/hive/: compose.yml
compose/hive/conf/: kyuubi-defaults.conf  spark-defaults.conf
config/: config.properties  config.yaml
core/: ActonTypeEnum.py  contentaction.py  itemaction.py  manager.py  treepath.py
core/config/: ConfigManager.py
core/config/model/: connection.py
core/driver/: abstractdataresponse.py  abstractdriver.py
drivers/mongodb/: AbstractDriver.py  __init__.py  actionrules.py  contentactionrules.py  treeactionrules.py
drivers/postgresql/: __init__.py  contentactionrules.py  tabularactionrules.py  treeactionrules.py
drivers/postgresql/postgresql/: contentactionrules.py  queryactionrules.py
playground/: docker-compose.yml  init.sql
playground/config/: config.yaml
playground/hive/: .env  compose.yml  init_deltalake.sql
playground/hive/conf/: core-site.xml
playground/mongodb/: compose.yml  dbinit.js
playground/postgresql/: compose.yml  init.sql
src/config/: config.yaml
src/core/: manager.py  treepath.py
src/core/driver/: abstractdataresponse.py
src/drivers/hive/: __init__.py
src/drivers/mongodb/: __init__.py  (+3 more)
src/main/: cli_args.py  main.py
src/widgets/: contentWin.py  dbcontent.py  dbtabular.py  dbtree.py  modelmanager.py  queryedit.py  statusbar.py
widgets/: ContentData.py  contentWin.py  dbcontent.py  dbtabular.py  dbtree.py  divecontent.py  divetree.py  mainwindow.py  modelmanager.py  statusbar.py  utils.py
widgets/model/: viewtypeenum.py
(+62 files in other folders)
