[tool.poetry]
name = "divedb"
version = "0.1.0"
description = ""
authors = ["Fabio <fabio@stsk.it>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "3.12"
pyyml = "^0.0.2"
pyqt6 = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
